--- a/product-details.html
+++ b/product-details.html
@@ -34,12 +34,13 @@
             font-size: 1.6rem;
         }
         .product-details {
-            position: absolute; /*relative to icon close*/
+            position: absolute; /*relative for icon close*/
             right: 0;
-            display: flex;
-            flex-direction: column;
+            display: grid;
+            grid-template-rows: auto auto 1fr;
             width: 384px;
             height: 100vh;
+            overflow-y: scroll;
             border-radius: 0px 0px 10px 10px;
             box-shadow: 0px 0px 5px rgba(0,0,0,.10);
         }
@@ -79,9 +80,8 @@
             background-color: var(--hospital-green);
         }
         .product-details__content {
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
+            display: grid;
+            grid-template-rows: 1fr auto;
             padding: 24px 36px;
             height: 100%;
         }
@@ -98,7 +98,7 @@
             color: var(--very-light-pink);
         }
         .product-details__description {
-            margin-bottom: 40px;
+            margin-bottom: 20px;
             color: var(--very-light-pink);
         }
         .primary-button {
@@ -122,7 +122,7 @@
             margin-right: 8px;
             color: var(--white);
         }
-        @media (max-width: 768px) {
+        @media (max-width: 640px) {
             .product-details {
                 width: 100%;
             }
