feat: Add fusion of navbar with mobile menu

--- a/index.html
+++ b/index.html
@@ -72,6 +72,33 @@
                 </li>
             </ul>
         </div>
+
+        <div class="mobile-menu-container inactive">
+            <div class="mobile-menu-container-content">
+                <div class="mobile-menu">
+                    <img class="mobile-menu__icon-close" src="./assets/icons/icon_close.png" alt="">
+                    <p>CATEGORIES</p>
+                    <ul>
+                        <li><a href="/">All</a></li>
+                        <li><a href="/">Clothes</a></li>
+                        <li><a href="/">Electronics</a></li>
+                        <li><a href="/">Furnitures</a></li>
+                        <li><a href="/">Toys</a></li>
+                        <li><a href="/">Others</a></li>
+                    </ul>
+                    <div class="divider"></div>
+                    <ul>
+                        <li><a href="/">My orders</a></li>
+                        <li><a href="/">My account</a></li>
+                    </ul>
+                </div>
+                
+                <div class="mobile-menu__footer">
+                    <p>camilayokoo@gmail.com</p>
+                    <a href="/">Sign out</a>
+                </div>
+            </div>
+        </div>
     </header>
 
     <script src="./main.js"></script>
