feat: Add fusion of navbar with shopping cart & Improve interaction between menus

--- a/index.html
+++ b/index.html
@@ -101,6 +101,83 @@
         </div>
     </header>
 
+    <aside class="product-details inactive">
+        <div class="product-details-container">
+            <h1 class="title title--shopping-cart"> 
+                <img class="title__icon" src="./assets/icons/flechita.svg" alt="back arrow">
+                Shopping cart
+            </h1>
+
+            <div class="shopping-cart shopping-cart--shopping-cart">
+                <div class="article article--shopping-cart">
+                    <figure>
+                        <img src="https://images.pexels.com/photos/2228583/pexels-photo-2228583.jpeg?auto=compress&cs=tinysrgb&w=260&h=50&dpr=2" alt="shelf">
+                    </figure>
+                    <p>Round shelf</p>
+                    <p  class="order__price">$ 120,00</p>
+                    <img src="./assets/icons/icon_close.png" alt="icon close">
+                </div>
+                <div class="article article--shopping-cart">
+                    <figure>
+                        <img src="https://images.pexels.com/photos/2228583/pexels-photo-2228583.jpeg?auto=compress&cs=tinysrgb&w=260&h=50&dpr=2" alt="shelf">
+                    </figure>
+                    <p>Round shelf</p>
+                    <p  class="order__price">$ 120,00</p>
+                    <img src="./assets/icons/icon_close.png" alt="icon close">
+                </div>
+                <div class="article article--shopping-cart">
+                    <figure>
+                        <img src="https://images.pexels.com/photos/2228583/pexels-photo-2228583.jpeg?auto=compress&cs=tinysrgb&w=260&h=50&dpr=2" alt="shelf">
+                    </figure>
+                    <p>Round shelf</p>
+                    <p  class="order__price">$ 120,00</p>
+                    <img src="./assets/icons/icon_close.png" alt="icon close">
+                </div>
+                <div class="article article--shopping-cart">
+                    <figure>
+                        <img src="https://images.pexels.com/photos/2228583/pexels-photo-2228583.jpeg?auto=compress&cs=tinysrgb&w=260&h=50&dpr=2" alt="shelf">
+                    </figure>
+                    <p>Round shelf</p>
+                    <p  class="order__price">$ 120,00</p>
+                    <img src="./assets/icons/icon_close.png" alt="icon close">
+                </div>
+                <div class="article article--shopping-cart">
+                    <figure>
+                        <img src="https://images.pexels.com/photos/2228583/pexels-photo-2228583.jpeg?auto=compress&cs=tinysrgb&w=260&h=50&dpr=2" alt="shelf">
+                    </figure>
+                    <p>Round shelf</p>
+                    <p  class="order__price">$ 120,00</p>
+                    <img src="./assets/icons/icon_close.png" alt="icon close">
+                </div>
+                <div class="article article--shopping-cart">
+                    <figure>
+                        <img src="https://images.pexels.com/photos/2228583/pexels-photo-2228583.jpeg?auto=compress&cs=tinysrgb&w=260&h=50&dpr=2" alt="shelf">
+                    </figure>
+                    <p>Round shelf</p>
+                    <p  class="order__price">$ 120,00</p>
+                    <img src="./assets/icons/icon_close.png" alt="icon close">
+                </div>
+                <div class="article article--shopping-cart">
+                    <figure>
+                        <img src="https://images.pexels.com/photos/2228583/pexels-photo-2228583.jpeg?auto=compress&cs=tinysrgb&w=260&h=50&dpr=2" alt="shelf">
+                    </figure>
+                    <p>Round shelf</p>
+                    <p  class="order__price">$ 120,00</p>
+                    <img src="./assets/icons/icon_close.png" alt="icon close">
+                </div>
+            </div>
+            
+            <div class="order order--shopping-cart">
+                <div>
+                    <p class="order__date">Total</p>
+                </div>
+                <p class="order__price">$ 560.00</p>
+            </div>
+            <button class="primary-button">Checkout</button>
+        </div>
+        
+    </aside>
+
     <script src="./main.js"></script>
 </body>
 </html>
