feat: Add fusion product list

--- a/index.html
+++ b/index.html
@@ -178,6 +178,23 @@
         
     </aside>
 
+    <section class="main-container">
+        <div class="cards-container">
+            <!-- <div class="product-card">
+                <img src="https://images.pexels.com/photos/100582/pexels-photo-100582.jpeg?auto=compress&cs=tinysrgb&w=630&h=375&dpr=0" alt="">
+                <div class="product-card__info">
+                    <div>
+                        <p>$ 400</p>
+                        <p>Bike</p>
+                    </div>
+                    <figure>
+                        <img src="./assets/icons/bt_add_to_cart.svg" alt="">
+                    </figure>
+                </div>
+            </div> -->
+        </div>
+    </section>
+
     <script src="./main.js"></script>
 </body>
 </html>
